--- a/public/main.css
+++ b/public/main.css
@@ -1,31 +1,44 @@
 body {
-  background-color: white;
+  background-color: #f5f6f7;
   color: rgb(32, 32, 32);
 }
-
-#page {
-  margin: 20px auto;
-  width: 400px;
-}
-
-#message-form {
-  border-bottom: 1px solid black;
-  padding-bottom: 20px;
-}
-
-#message-form button[type="submit"] {
-  margin-top: 10px;
-}
-
-#message-form #message-body {
-  height: 100px;
+h1 {
+  text-align: center;
+  color: #39454b;
   width: 100%;
 }
 
-.message-list .message-timestamp {
-  font-size: 12px;
-  font-style: italic;
-  margin-bottom: 10px;
-  margin-top: 10px;
-  text-align: right;
+#forms {
+  margin: 20px auto;
+  width: 600px;
+  height: 500px;
+  background-color: white;
 }
+
+/*#page {*/
+/*  margin: 20px auto;*/
+  /*width: 400px;*/
+/*}*/
+
+/*#message-form {*/
+/*  border-bottom: 1px solid black;*/
+/*  padding-bottom: 20px;*/
+/*}*/
+
+/*#message-form button[type="submit"] {*/
+/*  margin-top: 10px;*/
+/*}*/
+
+/*#message-form #message-body {*/
+/*  height: 100px;*/
+/*  width: 100%;*/
+/*}*/
+
+/*.message-list .message-timestamp {*/
+/*  font-size: 12px;*/
+/*  font-style: italic;*/
+/*  margin-bottom: 10px;*/
+/*  margin-top: 10px;*/
+/*  text-align: right;*/
+/*}*/
+
