--- a/views/index.erb
+++ b/views/index.erb
@@ -9,12 +9,12 @@
   </head>
   <body>
     <div id="page">
-      <h1>Welcome to Mission Bit Hacker Lab!</h1>
+      <h1>Welcome to the Mission Bit Hacker Lab!</h1>
       <div id="forms">
       <form id="visit-form" method="POST" action="/visit">
-        <input type="text" name="email" placeholder="Your main e-mail address, be consistent"></input>
-        <input type="text" name="school" placeholder="School"></input> 
-        <input type="text" name="first" placeholder="First name"></input>
+        <input type="text" name="first" placeholder="First name" id="first-name"></input>
+        <input type="text" name="school" placeholder="School" id="school-name"></input> 
+        <input type="text" name="email" placeholder="Your main e-mail address, be consistent" id="email-name"></input>
         <textarea id="message-body" name="comments" placeholder="Enter any comments about your visit. What you did, what you liked..."></textarea>
         <button type="submit">Record visit</button>
       </form>
