--- a/views/index.erb
+++ b/views/index.erb
@@ -16,8 +16,11 @@
         <input type="text" name="school" placeholder="School" id="school-name"></input> 
         <input type="text" name="email" placeholder="Your main e-mail address, be consistent" id="email-name"></input>
         <textarea id="message-body" name="comments" placeholder="Enter any comments about your visit. What you did, what you liked..."></textarea>
-        <button type="submit">Record visit</button>
+        <div id="button-center" align= "middle">
+        <button type="submit" id="visit-button">Record visit</button>
+        </div>
       </form>
+        
       </div>
       <% people.each do |person| %>
         <p>
