--- a/views/index.erb
+++ b/views/index.erb
@@ -9,6 +9,8 @@
   </head>
   <body>
     <div id="page">
+      <!--<img src="missionbit.jpg" style="width: 400px; height: 300px;"/>-->
+      
       <h1>Welcome to the Mission Bit Hacker Lab!</h1>
       <div id="forms">
       <form id="visit-form" method="POST" action="/visit">
