--- a/views/index.erb
+++ b/views/index.erb
@@ -6,6 +6,7 @@
 
     <link rel="stylesheet" type="text/css" href="normalize.css">
     <link rel="stylesheet" type="text/css" href="main.css">
+    <link href='http://fonts.googleapis.com/css?family=Syncopate' rel='stylesheet' type='text/css'>
   </head>
   <body>
     <div id="page">
