--- a/views/index.erb
+++ b/views/index.erb
@@ -14,32 +14,17 @@
       
       <h1>Welcome to the Mission Bit Hacker Lab!</h1>
       <div id="forms">
-      <form id="visit-form" method="POST" action="/visit">
-        <input type="text" name="first" placeholder="First name" id="first-name"></input>
-        <input type="text" name="school" placeholder="School" id="school-name"></input> 
-        <input type="text" name="email" placeholder="Your main e-mail address, be consistent" id="email-name"></input>
-        <textarea id="message-body" name="comments" placeholder="Enter any comments about your visit. What you did, what you liked..."></textarea>
-        <div id="button-center" align= "middle">
-        <button type="submit" id="visit-button">Record visit</button>
-        </div>
-      </form>
-        
+        <a href="/visits">Look at recorded visits</a>
+        <form id="visit-form" method="POST" action="/visit">
+          <input type="text" name="first" placeholder="First name" id="first-name"></input>
+          <input type="text" name="school" placeholder="School" id="school-name"></input> 
+          <input type="text" name="email" placeholder="Your main e-mail address, be consistent" id="email-name"></input>
+          <textarea id="message-body" name="comments" placeholder="Enter any comments about your visit. What you did, what you liked..."></textarea>
+          <div id="button-center" align= "middle">
+          <button type="submit" id="visit-button">Record visit</button>
+          </div>
+        </form>
       </div>
-      <% people.each do |person| %>
-        <p>
-          <%= person.email + " " + person.first + " " + person.school + " " + person.visits.length.to_s %>
-          <p>
-            <% person.visits.each do |visit| %>
-              <% if visit.shown == 1 %>
-                <p><%= visit.comments %></p> 
-                <form id="visit-form" method="POST" action=<%= "/deletevisit/" + visit.id.to_s %>>
-                  <button type="submit">Hide visit</button>
-                </form>
-              <% end %>
-            <% end %>
-          </p>
-        </p>
-      <% end %>
     </div>
   </body>
 </html>
