--- a/public/main.css
+++ b/public/main.css
@@ -12,8 +12,7 @@ h1 {
   text-align: center;
   color: #39454b;
   width: 100%;
-  font-size: 40px;
-  
+  font-size: 50px;
 }
 
 #forms {
@@ -60,8 +59,7 @@ h1 {
   margin-left: 60px;
 }
 #visit-button{
-  /*font-family: 'Syncopate', sans-serif;*/
-  background: #39454b;;
+  background: #39454b;
   /*background: #e7746f;*/
   color: #fff;
   border-radius: 4px;
@@ -71,6 +69,19 @@ h1 {
   font-size: 2.0em;
   margin: 15px 0 0.5em 0;
   border: 0;
+}
+#visits-button {
+  background: #39454b;
+  color: #fff;
+  padding: 0.2em 0.2em;
+  text-decoration: none;
+  font-weight: 200;
+  font-size: 1.0em;
+}
+
+#button-left {
+  text-align: center;
+  padding: 2em;
 }
 
 
