--- a/public/main.css
+++ b/public/main.css
@@ -1,4 +1,5 @@
-body {  height:100%;
+html {  
+  height:100%;
   width:100%;
   background-image: url("colorful-triangles-background.jpg");
   background-size: 100% 120%;
@@ -81,8 +82,19 @@ h1 {
 
 #button-left {
   text-align: center;
-  padding: 2em;
+  padding: 3.5em;
 }
+
+/*VISITS PAGE*/
+
+#forms-visits {
+  margin: 20px auto;
+  width: 70%;
+  height: 700px;
+  background-color: white;
+}
+
+
 
 
 /*#page {*/
