--- a/views/index.erb
+++ b/views/index.erb
@@ -10,9 +10,8 @@
   </head>
   <body>
     <div id="page">
-      <!--<img src="missionbit.jpg" style="width: 400px; height: 300px;"/>-->
       
-      <h1>Welcome to the Mission Bit Hacker Lab!
+      <h1 id="title-visits">Welcome to the Mission Bit Hacker Lab!
       </h1>
 
       <div id="forms">
@@ -29,7 +28,7 @@
       </div>
 
       <div id="button-left">
-        <a id="visits-button" href="/redirectvisits">Look at recorded visits</a>
+        <a id="visits-button" href="/visits">Look at recorded visits</a>
       </div>
     </div>
   </body>
